unpackaged/main/default/objects/Revenue_Setting__mdt/Revenue_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Revenue Setting</label>
    <pluralLabel>Revenue Settings</pluralLabel>
</CustomObject>