unpackaged/main/default/objects/Revenue_Setting__mdt/fields/Auto_Bookings_Start_After_CW_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Bookings_Start_After_CW_Days__c</fullName>
    <label>Auto Bookings: Start After CW (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>