unpackaged/main/default/objects/Revenue_Setting__mdt/fields/Auto_Bookings_Start_after_Exp_days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Bookings_Start_after_Exp_days__c</fullName>
    <label>Auto Bookings: Start after Exp (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>