unpackaged/main/default/objects/Revenue_Setting__mdt/fields/Past_Close_Bookable_Window_days__c.field-meta.xml
<CustomField>
    <fullName>Past_Close_Bookable_Window_days__c</fullName>
    <label>Past Close Bookable Window (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>