unpackaged/main/default/objects/Revenue_Setting__mdt/fields/Wins_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Wins_Channel_ID__c</fullName>
    <label>#wins Channel ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>